--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ alibaba.cloud.secret-key=****
 server.port=8080
 # Actuator Web \u8BBF\u95EE\u7AEF\u53E3
 management.server.port=8081
+#spring.mvc.favicon.enabled=
+#\u81EA\u5B9A\u4E49\u9759\u6001\u8D44\u6E90\u8DEF\u5F84 \u591A\u4E2A\u9017\u53F7\u5206\u5272
+#spring.resources.static-locations=
