--- a/pom.xml
+++ b/pom.xml
@@ -32,16 +32,21 @@
                 </exclusion>
             </exclusions>
         </dependency>
-<!--引入jqueryw web jar-->
+        <!--引入jqueryw web jar-->
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
             <version>3.5.1</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <!--Jquery组件（前端）-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.0.0</version>
         </dependency>
     </dependencies>
 
