--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ management.server.port=8081
 #\u81EA\u5B9A\u4E49\u9759\u6001\u8D44\u6E90\u8DEF\u5F84 \u591A\u4E2A\u9017\u53F7\u5206\u5272
 #spring.resources.static-locations=
 server.servlet.context-path=/crud
+spring.messages.basename=i18n.login
