--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.messages.basename=i18n.login
 spring.thymeleaf.cache=false
 #\u65E5\u671F\u683C\u5F0F\u5316
 spring.mvc.format.date=yyyy-MM-dd
+#\u5F00\u542F hiddenmethod \u8FC7\u6EE4\u5668
+spring.mvc.hiddenmethod.filter.enabled=true
