--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.thymeleaf.cache=false
 spring.mvc.format.date=yyyy-MM-dd
 #\u5F00\u542F hiddenmethod \u8FC7\u6EE4\u5668
 spring.mvc.hiddenmethod.filter.enabled=true
+#\u663E\u793A\u9519\u8BEF\u4FE1\u606F
+server.error.include-exception=true
+server.error.include-binding-errors=always
+server.error.include-stacktrace=always
+server.error.include-message=always
