--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ server.error.include-exception=true
 server.error.include-binding-errors=always
 server.error.include-stacktrace=always
 server.error.include-message=always
+
+#tomcat\u7684\u914D\u7F6E
+server.tomcat.uri-encoding=UTF-8
