--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,4 @@ server.error.include-message=always
 
 #tomcat\u7684\u914D\u7F6E
 server.tomcat.uri-encoding=UTF-8
+server.servlet.register-default-servlet=true
